# paperswiki

./: .env.example  .gitignore  README.md  agent.py  deep_research.py  deep_research_prompt.yaml  docker-compose.yml  mcp_server.py  mcp_servers.json  otel-collector-config.yaml  pyproject.toml  requirements.txt  research_topics.yaml  viewer.py
analysis/: log_analysis.ipynb
grafana/dashboards/: arxivsearcher.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
openspec/changes/migrate-rndresearch-mcp-search/: design.md  proposal.md  tasks.md
openspec/changes/migrate-rndresearch-mcp-search/specs/arxiv-research-platform/: spec.md
openspec/changes/migrate-rndresearch-mcp-search/specs/mcp-arxiv-search/: spec.md
prometheus/: prometheus.yml
src/: abstract_filter.py  arxiv_client.py  deep_analyser.py  logger.py  mcp_arxiv_client.py  paper_store.py  summarizer.py
